mybril/src/snapshots/mybril__test__partition-10.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 4
    },
    {
      "labels": [
        "somewhere"
      ],
      "op": "jmp"
    }
  ],
  [
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 2
    }
  ],
  [
    {
      "label": "somewhere"
    },
    {
      "op": "print",
      "args": [
        "v"
      ]
    }
  ]
]
