mybril/src/snapshots/mybril__test__partition-11.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "add",
      "type": "int",
      "dest": "v",
      "args": [
        "x",
        "y"
      ]
    },
    {
      "op": "print",
      "args": [
        "v"
      ]
    }
  ]
]
