mybril/src/snapshots/mybril__test__partition-12.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "labels": [
        "here",
        "there"
      ],
      "op": "br",
      "args": [
        "b"
      ]
    }
  ],
  [
    {
      "label": "here"
    },
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 1
    },
    {
      "op": "print",
      "args": [
        "v"
      ]
    },
    {
      "op": "ret"
    }
  ],
  [
    {
      "label": "there"
    },
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 2
    },
    {
      "op": "print",
      "args": [
        "v"
      ]
    },
    {
      "op": "ret"
    }
  ]
]
