mybril/src/snapshots/mybril__test__partition-13.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "nop"
    },
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 5
    },
    {
      "op": "nop"
    },
    {
      "op": "print",
      "args": [
        "v"
      ]
    },
    {
      "op": "nop"
    }
  ]
]
