mybril/src/snapshots/mybril__test__partition-15.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 5
    },
    {
      "op": "print",
      "args": [
        "v"
      ]
    }
  ]
]
