mybril/src/snapshots/mybril__test__partition-2.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "const",
      "type": "int",
      "dest": "one",
      "value": 1
    },
    {
      "op": "const",
      "type": "int",
      "dest": "two",
      "value": 2
    },
    {
      "op": "const",
      "type": "int",
      "dest": "sixtytwo",
      "value": 62
    },
    {
      "op": "call",
      "type": "int",
      "dest": "half",
      "args": [
        "two",
        "sixtytwo"
      ]
    },
    {
      "op": "print",
      "args": [
        "half"
      ]
    },
    {
      "op": "sub",
      "type": "int",
      "dest": "smaller",
      "args": [
        "half",
        "one"
      ]
    },
    {
      "op": "add",
      "type": "int",
      "dest": "maxint",
      "args": [
        "half",
        "smaller"
      ]
    },
    {
      "op": "print",
      "args": [
        "maxint"
      ]
    },
    {
      "op": "add",
      "type": "int",
      "dest": "overflow",
      "args": [
        "maxint",
        "one"
      ]
    },
    {
      "op": "print",
      "args": [
        "overflow"
      ]
    }
  ]
]
