mybril/src/snapshots/mybril__test__partition-7.snap
---
source: mybril/src/main.rs
expression: blocks
---
[
  [
    {
      "op": "const",
      "type": "int",
      "dest": "v",
      "value": 2
    },
    {
      "op": "call"
    },
    {
      "op": "print",
      "args": [
        "v"
      ]
    }
  ]
]
